	* removed ags_channel_recursive_play_init()
	* removed ags_channel_tillrecycling_cancel()
	* removed ags_channel_recursive_reset_recall_ids()
	* removed ags_audio_signal_realloc_buffer_size()
	* removed ags_audio_signal_tile()
	* removed ags_audio_signal_scale()
	* removed ags_synth_generator_compute_extended()
	* removed ags_synth_generator_compute_with_audio_signal()

ags (1.4.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_functional_audio_test.c to create notation as needed
	* defaulted to disable OSS4 dependency

ags (1.4.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_set_audio_channels() to remove unneeded notation, automation and wave objects

ags (1.4.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed copy to clipboard in AgsMatrix and AgsDrum

ags (1.4.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed playback scope
	* fixed wrong count of runs and init code in ags_channel.c
	* minor-fixes

ags (1.4.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV during ags_recall_dssi_run_finalize()
	* fixed potential SIGSEGV during ags_recall_lv2_run_finalize()
	* removed redundant code in ags_simple_file.c

ags (1.4.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* replaced pa_mainloop_new() by pa_glib_main_loop_new()
	* minor changes

ags (1.4.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsLiveDssiBridge and AgsLiveLv2Bridge notation editor channel mapping

ags (1.4.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restore of AgsPattern
	* fixed ags_open_file.c to use correct file link
	* fixed async-safe ags_simple_file_read_machine()

ags (1.4.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_apply_synth.c to update rt-template
	* improved ags_clear_audio_signal.c to update rt-template

ags (1.4.11)
