@@ -29,7 +29,6 @@
 #include <pulse/pulseaudio.h>
 #include <pulse/stream.h>
 #include <pulse/error.h>
-#include <pulse/glib-mainloop.h>
 #endif
 
 #include <pthread.h>
@@ -63,7 +62,7 @@ struct _AgsPulseServer
   GObject *application_context;
 
 #ifdef AGS_WITH_PULSE
-  pa_glib_mainloop *main_loop;
+  pa_mainloop *main_loop;
   pa_mainloop_api *main_loop_api;
 #else
   gpointer main_loop;
